# z

./: .gitignore  Makefile.am  Makefile.in  README  TODO  config.h.in  configure  configure.ac  file.data  rsyncexclude
autom4te.cache/: output.0  requests  traces.0  traces.1
build-aux/: install-zish-0.2.sh  install-zish.sh
config/bconf/buildoutsDev/: Zope.cgi.in  altinstall.pth.in  buildoutB.cfg.in  buildoutT.cfg.in  paster.cfg.in  versions-3.3.4.cfg.in
config/bconf/buildoutsDev4/: buildoutB.cfg.in  buildoutE.cfg.in  buildoutT.cfg.in  buildoutT2.cfg  distutils_prefix.cfg.in  versions-3.2.1.cfg.in  zope.conf.instance.in
config/bconf/buildoutsPaid/: buildoutB.cfg.in  buildoutT.cfg.in  distutils_prefix.cfg.in  ez_setup.py.in  sitecustomize.py.in  versions-3.2.1.cfg.in  zish.pth.in  zope.conf.zeoclient.in
config/bconf/buildoutsProd/: buildoutB.cfg.in  buildoutT.cfg.in  sitecustomize.py.in  versions-3.2.1.cfg.in
config/bconf/buildoutsProd4/: buildoutB.cfg.in  buildoutT.cfg.in  distutils_home.cfg.in  distutils_prefix.cfg.in  htaccess.in  versions-4.0rc1.cfg.in  versions-Zope-2.12.10.cfg.in  zope.conf.in  zope.conf.zeoclient.in
config/common/: distutils_home.cfg.in  distutils_prefix.cfg.in  readme1.in  zope_vhost.in
doc/: dudas.txt
